fix styels on ios

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 html,
 body,
 #root {
-  height: 100%;
+  min-height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
